# jadia

./: .gitignore  README.md  eval.ipynb  pyproject.toml  requirements.txt
src/jadia/: __init__.py  audio.py  coskmeans.py  gaussian.py  hungarian.py  main.py  metrics.py  models.py  segment.py
src/jadia/assets/: lite.pt  lite_v2.pt  mel_filters.npz
tests/: test_eval.py
