[project]
name = "jadia"
version = "0.0.1"
authors = [
  { name="Sergey Skrebnev", email="sergey.skrebnev@gmail.com" },
]
description = "JaNet diarization package"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/skrbnv/jadia"

[tool.setuptools.package-data]
"jadia.assets" = ["*.pt", "*.npz"]