[project]
name = "jadia"
version = "0.1"
authors = [
  { name="Sergey Skrebnev", email="sergey.skrebnev@gmail.com" },
]
description = "JaNet diarization package"
readme = "README.md"
dependencies = [
  "librosa>=0.10.1",
  "numpy>=2.1.0",
  "silero_vad>=5.1",
  "soundfile>=0.12.1",
  "soxr>=0.3.7",
  "torch>=2.4.0",
]

requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/skrbnv/jadia"

[tool.setuptools.package-data]
"jadia.assets" = ["*.pt", "*.npz"]